# qserl

./: AUTHORS  CMakeLists.txt  README.md  cmake_uninstall.cmake.in
bindings/: CMakeLists.txt  rod3d.cc
cmake/: QserlConfig.cmake.in  common.cmake  detect_msvc_versions.cmake  install.cmake
doc/: quick_start.html  quick_start.rst
examples/: CMakeLists.txt  example0.cpp  example_rod_2D.cpp  example_rod_3D.cpp  example_rod_3D.py  generate_inverse_geometry_benchmark_dataset_2D.cpp  generate_stability_dataset_2D.cpp  ik.py
include/qserl/: exports.h  parameters.h  rod.h  workspace_integrated_state.h  workspace_state.h
include/qserl/rod2d/: analytic_dqda.h  analytic_energy.h  analytic_mu.h  analytic_q.h  inverse_geometry.h  parameters.h  rod.h  types.h  workspace_integrated_state.h  workspace_state.h
include/qserl/rod3d/: ik.h  parameters.h  rod.h  types.h  workspace_integrated_state.h  workspace_state.h
include/qserl/util/: constants.h  eigen_types_serialization.h  explog.h  forward_class.h  timer.h
install/: FindQSERL.cmake  QserlConfig.cmake.in
src/: CMakeLists.txt  costate_system.cc  costate_system.h  jacobian_system.cc  jacobian_system.h  rod.cc  state_system.cc  state_system.h  workspace_integrated_state.cc  workspace_state.cc
src/rod2d/: analytic_dqda.cc  analytic_energy.cc  analytic_mu.cc  analytic_q.cc  costate_system.cc  costate_system.h  inverse_geometry.cc  jacobian_system.cc  jacobian_system.h  rod.cc  state_system.cc  state_system.h  workspace_integrated_state.cc  workspace_state.cc
src/rod3d/: costate_system.cc  costate_system.h  full_system.cc  full_system.h  ik.cc  jacobian_system.cc  jacobian_system.h  parameters.cc  rod.cc  state_system.cc  state_system.h  workspace_integrated_state.cc  workspace_state.cc
src/util/: eigen_types_serialization.h  forward_class.h  jacobi_elliptic.h  lie_algebra_utils.cc  lie_algebra_utils.h  timer.cc  timer.h  triplet.h  utils.cc  utils.h
test/: CMakeLists.txt  CMakeUnitTests.txt  explog.cc  main.cc  parameters_serialization.cc  rod2d_analytic_vs_numeric.cc  rod2d_analytic_vs_numeric_dqda.cc  rod2d_analytic_vs_numeric_mu.cc  rod2d_analytic_vs_numeric_q.cc  rod2d_integrated_tests.cc  rod3d_integrated_tests.cc  rod_integrated_tests.cc
